<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTask">

    <TextView
        android:id="@+id/textViewCreateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/Task_Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCreateName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewCreateName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateName" />

    <TextView
        android:id="@+id/textViewCreateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonSetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Set_Date"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:backgroundTint="#BCBBBB"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreateDate"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewCreatePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Priority"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreatePriority">

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/High" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Medium" />

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Low" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Cancel"
        android:textColor="#020202"
        app:backgroundTint="#BCBBBB"
        app:layout_constraintStart_toStartOf="@+id/textViewCreatePriority"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:textColor="#040404"
        app:backgroundTint="#BCBBBB"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="@+id/buttonSetDate" />
</androidx.constraintlayout.widget.ConstraintLayout>